```mermaid
erDiagram
    CustomerDetails ||--o{ Bookings : "places (1:M)"
    StaffInformation ||--o{ Bookings : "manages (1:M)"
    CustomerDetails ||--o{ Orders : "initiates (1:M)"
    StaffInformation ||--o{ Orders : "serves (1:M)"
    Menu ||--o{ Orders : "ordered (1:M)"
    Orders ||--|| OrderDeliveryStatus : "tracked by (1:1)"
    MenuItems ||--o{ Menu : "included in (1:M)"

    CustomerDetails {
        INT CustomerID PK "Auto Increment"
        VARCHAR(100) CustomerName "NOT NULL"
        VARCHAR(100) ContactDetails "NOT NULL"
    }

    StaffInformation {
        INT StaffID PK "Auto Increment"
        VARCHAR(100) StaffName "NOT NULL"
        VARCHAR(50) Role "NOT NULL"
        DECIMAL(10_2) Salary "NOT NULL"
    }

    Bookings {
        INT BookingID PK "Auto Increment"
        DATE BookingDate "NOT NULL"
        INT TableNumber "NOT NULL"
        INT CustomerID FK "NOT NULL"
        INT StaffID FK "NOT NULL"
    }

    MenuItems {
        INT MenuItemID PK "Auto Increment"
        VARCHAR(100) CourseName "NOT NULL"
        VARCHAR(100) StarterName "NOT NULL"
        VARCHAR(100) DesertName "NOT NULL"
        VARCHAR(100) DrinkName "NOT NULL"
    }

    Menu {
        INT MenuID PK "Auto Increment"
        INT MenuItemID FK "NOT NULL"
        VARCHAR(100) MenuName "NOT NULL"
        VARCHAR(50) Cuisine "NOT NULL"
    }

    Orders {
        INT OrderID PK "Auto Increment"
        DATE OrderDate "NOT NULL"
        INT Quantity "NOT NULL"
        DECIMAL(10_2) TotalCost "NOT NULL"
        INT CustomerID FK "NOT NULL"
        INT MenuID FK "NOT NULL"
        INT StaffID FK "NOT NULL"
    }

    OrderDeliveryStatus {
        INT DeliveryID PK "Auto Increment"
        INT OrderID FK_UK "NOT NULL UNIQUE"
        DATE DeliveryDate "NOT NULL"
        VARCHAR(50) Status "NOT NULL"
    }
```
